Users route functional, update db_handler

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -8,5 +8,5 @@
 
 <p class="">hi</p>
 
-<h3>clients</h3>
-<a href="{{url_for('clients.clients')}}">a clientes pa</a>
+<h3>users</h3>
+<a href="{{url_for('users.users')}}">a usuarios pa</a>
